--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>this is new body text for github practice </p>
+    <p> this is new text for github practice (written by copilot) </p>
 </body>
 </html>
